<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/name_txt"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/your_name"
            android:inputType="textPersonName"
            android:singleLine="true" />

        <EditText
            android:id="@+id/last_name_txt"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:hint="@string/your_last_name"
            android:inputType="textPersonName"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/gender_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/gender"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/gender_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/genders" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/date"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/date_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select_date"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/like_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="12dp"
                android:text="@string/like_programming"
                android:textSize="18sp" />

            <RadioGroup
                android:id="@+id/like_radio_group"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:checkedButton="@id/yes_radio_button"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/yes_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/no_radio_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/languages_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/languages_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="12dp"
                android:layout_weight="1"
                android:text="@string/languages"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/java_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="12dp"
                    android:text="Java"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/js_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="12dp"
                    android:text="JavaScript"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/c_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="12dp"
                    android:text="C / C++"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/python_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Python"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/go_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Go"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/c_sharp_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="C#"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/main_parent"
        app:layout_constraintEnd_toEndOf="@+id/main_parent">

        <Button
            android:id="@+id/clean_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:text="@string/clean" />

        <Button
            android:id="@+id/send_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_weight="1"
            android:text="@string/send" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>